# brainmaze_bci2000

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test_publish.yml
brainmaze_bci2000/: __init__.py  bci2000.py  bids.py
tests/: conftest.py  test_bids.py
